--- a/assets/scss/0-base/variables.scss
+++ b/assets/scss/0-base/variables.scss
@@ -9,12 +9,6 @@
   padding-top: 50px;
 }
 
-.wrapper{
-	background: $secondary-background;
-	min-height: 100vh;
-	position:relative;
-}
-
 .content {
 	margin-left: $desktop-menu-width;
 	transition:all 100ms ease-in-out;
